# rust-win32-app

./: .gitignore  Cargo.toml  README.md  build.rs
res/: app.rc
src/: main.rs
src/atl/: mod.rs
src/browser/: mod.rs
src/browser/event/: mod.rs
src/browser/js/: mod.rs
src/bus/: mod.rs
src/com/: mod.rs
src/dialog/: mod.rs
src/regedit/: mod.rs
src/resource/: mod.rs
src/server/: mod.rs
src/util/: mod.rs
src/variant/: mod.rs
web/: package.json
web/script/: index.ts  module.d.ts  tsconfig.json
web/script/config/: index.ts
web/script/project/: index.ts
web/script/project/builder/: index.ts
web/script/project/config/base/: index.ts
web/script/project/config/default/: base.config.ts  dev.config.ts  index.ts  prod.config.ts
web/script/project/config/default/process-plugin/: index.ts
web/script/project/config/default/template/: index.html  mobile.html
web/script/project/config/monaco/: index.ts
web/script/project/config/typescript/: index.ts
web/script/project/config/typescript/jsx-loader/: hot-reload.js  injectH.js
web/script/project/developer/: index.ts
web/script/project/message/: index.ts
web/script/project/options/: index.ts
web/src/: global.d.ts  index.ts  module.d.ts  tsconfig.json
web/src/common/js-bridge/: index.ts
web/src/components/home/: index.tsx
web/src/components/layout/: index.tsx  style.module.scss
web/src/components/layout/header/: index.tsx  style.module.scss
web/src/components/layout/sidebar/: index.tsx  service.ts  style.module.scss
web/src/module/vue-tsx/: index.ts
web/src/style/: style.scss
(+4 files in other folders)
